src/objects/Position__c.object
<CustomObject>
    <description>This object stores information about the open job positions at our company.</description>
    <fields>
        <fullName>Apex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Csharp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C#</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Open__c</fullName>
        <formula>IF(
  Open_Date__c &gt; TODAY(),
  0,
  Close_Date__c - TODAY()
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Educational_Requirements__c</fullName>
        <label>Educational Requirements</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <picklist>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehousing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hire_By__c</fullName>
        <label>Hire By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JavaScript__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JavaScript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Java__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Java</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <label>Job Level</label>
        <picklist>
            <picklistValues>
                <fullName>Fresher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Sai Gon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ha Noi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Da Nang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At home</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <description>To check candidate is still working for current company or free</description>
        <label>Max Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Pay__c</fullName>
        <label>Min Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <label>Responsibilities</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <label>Skills Required</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open - Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Filled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Canceled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Travel_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Position Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <recordTypes>
        <fullName>IT_positions</fullName>
        <active>true</active>
        <description>Record type for all IT positions</description>
        <label>IT positions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Position</fullName>
        <active>true</active>
        <description>Record type for all non-IT positions</description>
        <label>Standard Position</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>